created basic structure of the page
Created HTML and SASS

--- a/scss/utilities/_variables.scss
+++ b/scss/utilities/_variables.scss
@@ -4,32 +4,19 @@
 
 // Colors
 
-$color-text: #777;
+$color-text: #9e9c98;
 $color-text-lighter: #A7A7A7;
-$color-primary: #7477BF;
-$color-secondary: #4c4b73;
-$color-background: #FBFBFB;
-$color-green: #81C98F;
 $font-size: 11px;
 
 // Fonts
 
-$font-stack-primary: 'Open Sans',
+$font-stack-primary: 'Source Sans Pro',
 sans-serif;
-$font-stack-accent: 'Playfair Display',
-serif;
+$font-weight-primary: 400;
+$font-weight-primary-heading: 600;
+$font-stack-accent: 'Work Sans',
+sans-serif;
+$font-weight-accent: 300;
 
 //Border style
-$border: solid #A7A7A7 .5px;
-
-
-// Breakpoints
-
-$breakpoint-tablet: 768px;
-$breakpoint-laptop: 1024px;
-
-
-// Slider Variables
-$slider-height: 30px;
-$slider-padding: 4px;
-$slider-width: 90px;
+$border: solid lightgrey 2px;
