added functionality to move between employee detail windows

--- a/scss/components/_modal.scss
+++ b/scss/components/_modal.scss
@@ -12,6 +12,7 @@
 }
 
 .modal-close-button {
+  color: $color-text;
   cursor: pointer;
   font-size: 25px;
   position: absolute;
@@ -22,7 +23,7 @@
 }
 
 .modal-close-button:hover {
-  color: $color-text;
+  color: black;
   transform: scale(1.3);
 }
 
