--- a/scss/components/_overlay.scss
+++ b/scss/components/_overlay.scss
@@ -2,7 +2,7 @@
   background: rgba(37, 36, 36, 0.6);
   bottom: 0;
   left: 0;
-  position: absolute;
+  position: fixed;
   right: 0;
   top: 0;
 }
