--- a/scss/components/_card.scss
+++ b/scss/components/_card.scss
@@ -1,7 +1,7 @@
 .card {
   border: $border;
   border-radius: 7px;
-  display: flex;
+  display: block;
   padding: 5px;
   cursor: pointer;
 }
@@ -11,7 +11,10 @@
   border-radius: 50%;
   height: 100px;
   width: auto;
-  margin: 0.8em;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 10px;
 }
 
 .text-container h2 {
