Fixed some laout issues concerning the avatars

--- a/scss/components/_overlay.scss
+++ b/scss/components/_overlay.scss
@@ -10,3 +10,10 @@
 .hidden {
   display: none;
 }
+
+.avatar-overlay {
+  border-radius: 50%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 10px;
+}
